# tddy-coder

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BUILD.yaml  Cargo.toml  README.md  bunfig.toml  claude-json-output-plan.txt  claude-json-output.txt  claude-sandbox  clean  config.example.yaml  daemon.yaml.production  dev  dev.config.yaml  dev.daemon.yaml  dev.desktop.yaml  fastcontext-tools-32k.Modelfile  flake.nix  install  package.json  release  run-livekit-testkit-server  sandbox-config.example.yaml  serve_term.sh  storybook  test  verify  web-dev
.agents/skills/darwin-sandbox/: SKILL.md
.agents/skills/plan-tdd-dev/: SKILL.md
.agents/skills/tdd/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: tdd-implementer.md
.claude/commands/: analyze-clean-code.md  analyze-third-party.md  fix-tests.md  ft-dev.md  green.md  merge.md  plan-ft-dev.md  plan-ft.md  plan-red.md  plan-tdd-migration.md  plan-tdd-one-shot.md  pr-wrap.md  pr.md  red.md  reproduce.md  requirements-change.md  test-acceptance.md  update-context-docs.md  validate-changes.md  validate-prod-ready.md  validate-tests.md  wrap-context-docs.md
.claude/skills/fluent-tests/: README.md  SKILL.md
.cursor/agents/: refactor.md  tdd-implementer.md  test-writer.md
.cursor/commands/: analyze-clean-code.md  analyze-third-party.md  fix-tests.md  ft-dev.md  green.md  merge.md  plan-ft-dev.md  plan-ft.md  plan-tdd-migration.md  plan-tdd-one-shot.md  pr-wrap.md  pr.md  red.md  reproduce.md  requirements-change.md  test-acceptance.md  update-context-docs.md  validate-changes.md  validate-prod-ready.md  validate-tests.md  wrap-context-docs.md
.cursor/rules/: changeset-doc.mdc  coding-practices.mdc  dev-doc.mdc  feature-doc.mdc  general-code-style.mdc  prd-doc.mdc  rust-code-style.mdc  tdd.mdc  testing-practices.mdc
.cursor/skills/cypress-ct-debug/: SKILL.md
.cursor/skills/tdd/: SKILL.md
docs/dev/: TODO.md  changesets.md  tddy-coder.service.example  tddy-daemon.service.example
docs/dev/1-WIP/: 2026-03-07-permission-handling-claude-print-mode.md  2026-03-10-plan-approval-changeset.md  2026-03-11-terminal-streaming-via-grpc-changeset.md  2026-03-12-changeset.md  2026-03-13-ghostty-livekit-terminal.md  2026-03-13-web-bundle-serving-changeset.md  (+122 more)
docs/future/: graph-flow-create-once-pattern.md  tui-e2e-testing.md
docs/kb/: dioxus-web-terminal.md  tonic-method-routing.md
docs/plans/: 2026-03-21-backend-selection-dropdown-design.md  2026-03-21-backend-selection-dropdown.md
plan/: analyze-clean-code-report.md  evaluation-report.md  refactoring-plan.md  validate-prod-ready-report.md  validate-tests-report.md
plans/: analyze-clean-code-report.md  evaluation-report.md  grill-me-todo-app-test.md  leptos-wasm-todo-app-grill-me-brief.md  refactoring-plan.md  spawn-child-hello-bash-smoke-grill-me-brief.md  validate-prod-ready-report.md  validate-tests-report.md
plans/bugfix-analyze/: analyze-clean-code-report.md  evaluation-report.md  validate-prod-ready-report.md  validate-tests-report.md
plans/tdd-small-workflow-recipe/: analyze-clean-code-report.md  evaluation-report.md  validate-prod-ready-report.md  validate-tests-report.md
scripts/: check-build-yaml.py  desktop-dev.sh  local-bun-install.sh  resolve-local-lock.ts
(+169 files in other folders)
