[workspace]
resolver = "2"
members = [
    "packages/tddy-acp-stub",
    "packages/tddy-core",
    "packages/tddy-rpc",
    "packages/tddy-coder",
    "packages/tddy-tui",
    "packages/tddy-demo",
    "packages/tddy-tools",
    "packages/tddy-service",
    "packages/tddy-tui-testkit",
    "packages/tddy-e2e",
    "packages/tddy-livekit",
    "packages/tddy-codegen",
    "packages/tddy-livekit-testkit",
    "packages/tddy-connectrpc",
    "packages/tddy-github",
    "packages/tddy-daemon",
    "packages/tddy-workflow-recipes",
    "packages/tddy-workflow",
    "packages/tddy-integration-tests",
]
