[workspace]
resolver = "2"
members = [
    "packages/tddy-acp-stub",
    "packages/tddy-build",
    "packages/tddy-build-rust",
    "packages/tddy-build-typescript",
    "packages/tddy-build-docker",
    "packages/tddy-build-buildroot",
    "packages/tddy-build-qemu",
    "packages/tddy-demo-runner",
    "packages/tddy-graph",
    "packages/tddy-discovery",
    "packages/tddy-core",
    "packages/tddy-rpc",
    "packages/tddy-coder",
    "packages/tddy-tui",
    "packages/tddy-demo",
    "packages/tddy-demo-tui",
    "packages/tddy-tools",
    "packages/tddy-vm",
    "packages/tddy-service",
    "packages/tddy-tui-testkit",
    "packages/tddy-e2e",
    "packages/tddy-livekit",
    "packages/tddy-codegen",
    "packages/tddy-livekit-testkit",
    "packages/tddy-connectrpc",
    "packages/tddy-github",
    "packages/tddy-daemon",
    "packages/tddy-workflow-recipes",
    "packages/tddy-task",
    "packages/tddy-testing-commons",
    "packages/tddy-workflow",
    "packages/tddy-integration-tests",
    "packages/tddy-livekit-screen-capture",
    "packages/tddy-vnc",
    "packages/tddy-screenshare",
    "packages/tddy-rdp",
    "packages/tddy-sandbox",
    "packages/tddy-sandbox-darwin",
]
exclude = [
    # Real cargo workspace used as a tddy-build example fixture; built by the
    # tddy-build-rust integration tests, not a member of this workspace.
    "packages/tddy-build-rust/examples/workspace",
]

[workspace.dependencies]
rstest = "0.24"
pretty_assertions = "1"
